# matreshka_archive

./: .travis.yml  AUTHORS  CONTRIBUTORS  LICENSE  Makefile  Makefile.build  Makefile.build.in  Makefile.check  Makefile.config  Makefile.config.in  Makefile.install  Makefile.install.in  README  README.md
.copr/: Makefile
config/: system_address_size.adb
design/: matreshka-internals-host_parameters.ads  matreshka-internals-host_types__64.ads  matreshka-internals-markable_address_to_access_conversions.adb  matreshka-internals-markable_address_to_access_conversions.ads  matreshka-internals-markable_address_utilities.adb  matreshka-internals-markable_address_utilities.ads
design/catalogs/xmlcatconf/: Makefile.am  TODO  runTests.pl  runTests.xsl  xmlcatconf.dtd  xmlcatconf.xml
design/catalogs/xmlcatconf/elcel/: cat3.xml  circ2.xml  error.xml  notvalid2.xml  valid.xml
design/catalogs/xmlcatconf/kde/: cat_a.xml  circ2.xml  circ_deluri.xml  del.xml  error.xml  suff.xml  valid.xml
documentation/: conformance_statement.txt  universal_string.rst  universal_string.wiki
gnat/: configure.gpr  gen_breaks.gpr  matreshka_a2js.gpr  matreshka_amf.gpr  matreshka_amf_dd.gpr  matreshka_amf_mofext.gpr  matreshka_amf_ocl.gpr  matreshka_amf_tests.gpr  matreshka_amf_uml.gpr  matreshka_amf_utp.gpr  matreshka_common.gpr  matreshka_config.gpr.in  matreshka_fastcgi.gpr  matreshka_league.gpr  matreshka_league__debug.adc  matreshka_league__release.adc  matreshka_league_tests.gpr  matreshka_servlet.gpr  matreshka_soap.gpr  matreshka_soap_tests.gpr  matreshka_soap_wsse.gpr  matreshka_sql.gpr  (+28 more)
(+7687 files in other folders)
